--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     color: white;
-    background-color: black;
+    background-color: rgba(91, 26, 30, 1);
 }
 
 .navbar > h1{
