--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -1,4 +1,22 @@
 .contactme{
     height: 100vh;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.space{
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+.ctaButton{
+    background-color: rgb(87, 29, 29);
+    font-size: 1.4rem;
+    color: white;
+    padding: 1% 2%;
+    border: none;
 }
