--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,8 @@
     align-items: center;
     color: white;
     background-color: rgba(91, 26, 30, 1);
+    font-size: 13px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .navbar > h1{
