--- a/src/components/IntroPage/IntroPage.css
+++ b/src/components/IntroPage/IntroPage.css
@@ -1,16 +1,24 @@
 .intropage{
-    height: 50vh;
-    margin: 25vh 15%;
+    height: 70vh;
     text-align:center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: white;
-    width: 70%;
-    background: rgba(0, 0, 0, 0.482);
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+}
 
-    
+
+.introhead1{
+    margin-top: 2px;
+    font-size: 100px;
+    margin-bottom: 0%;
+}
+
+.introhead2{
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
 .typewriter{
